[ADDED] Base del proyecto creada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
+<p>
+  <mat-toolbar >
+    <mat-toolbar-row>
+      <span>Hibisco - Datos del mundo software</span>
+      <span class="example-spacer"></span>
+      <button mat-stroked-button color="primary" (click)="goToMyPage()">Sobre mi</button>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</p>
+
+<app-dashboard></app-dashboard>
 <router-outlet></router-outlet>
+<div  fxLayout="row" fxLayoutAlign="center end">
+  <label >Creado por Adrian Ferrandis. Version Alpha</label>
+</div>
+
+
