[ADDED] Mejora colores

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <p>
-  <mat-toolbar >
-    <mat-toolbar-row>
+  <mat-toolbar  color="primary">
+    <mat-toolbar-row >
       <span>Hibisco - Datos del mundo software</span>
       <span class="example-spacer"></span>
-      <button mat-stroked-button color="primary" (click)="goToMyPage()">Sobre mi</button>
+      <button mat-stroked-button color="accent" (click)="goToMyPage()">Sobre mi</button>
     </mat-toolbar-row>
   </mat-toolbar>
 </p>
